--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 
 <body>
 
-
+<a href="./recipes/lasagna.html">Lasagna</a>
+<a href="./recipes//salad.html">Salad</a>
+<a href="./recipes/garlic_bread.html">Garlic Bread</a>
 
 </body>
 
