Add alt attribute to image and placeholder description

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna</title>
 </head>
+
 <body>
 
-<h1>Lasagna</h1>
-<img src="../images/lasagna.jpg">
+    <h1>Lasagna</h1>
+        <img src="../images/lasagna.jpg" alt="an image of a garnished slice of lasagna 
+        lifted from the main platter as cheese stretches in-between">
+        <p><em>Lasagna</em></p>
 
 </body>
 </html>
