Add placeholder description

--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -6,10 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Salad</title>
 </head>
+
 <body>
     
-<h1>Salad</h1>
-<img src="../images/salad.jpg">
+    <h1>Salad</h1>
+        <img src="../images/salad.jpg">
+        <p><em>Salad</em></p>
 
 </body>
 </html>
