--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Garlic Bread</title>
 </head>
+
 <body>
     
-<h1>Garlic Bread</h1>
-<img src="garlic_bread.html">
+    <h1>Garlic Bread</h1>
+        <img src="../images/garlic_bread.jpg" alt="a top-down image of a toasted and 
+        sliced baguette as the slices of one are exposed to the camera">
+        <p><em>Garlic Bread</em></p>
 
 </body>
 </html>
