--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -10,7 +10,7 @@
 <body>
     
     <h1>Salad</h1>
-        <img src="../images/salad.jpg">
+        <img src="../images/salad.jpg" alt="an image of a salad">
         <p><em>Salad</em></p>
 
 </body>
