--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -13,6 +13,18 @@
         <img src="../images/garlic_bread.jpg" alt="a top-down image of a toasted and 
         sliced baguette as the slices of one are exposed to the camera">
         <p><em>Garlic Bread</em></p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ol>
 
 </body>
 </html>
