--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -15,15 +15,25 @@
         <p><em>Garlic Bread</em></p>
     <h3>Ingredients</h3>
     <ul>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>4 cloves garlic, crushed</li>
+        <li>2 tablespoons butter</li>
+        <li>2 tablespoons extra-virgin olive oil</li>
+        <li>1 load crusty bread, split</li>
+        <li>3 tablespoons grated cheese, Parmigiano or Romano, optional</li>
+        <li>Chopped fresh parsley</li>
     </ul>
     <h3>Steps</h3>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Combine garlic, butter, and oil in a microwave safe dish or in 
+            a small sauce pan.</li>
+        <li>Heat garlic and butter and oil in microwave for 1 minute or in 
+            a small pot over moderate-low heat for 3 minutes.</li>
+        <li>Toast split bread under broiler. Remove bread when it is toasted 
+            golden brown in color.</li>
+        <li>Bursh bread liberally with garlic oil. Sprinkle with cheese, if 
+            using, and parsley</li>
+        <li>If you added cheese, return to broiler and brown 30 seconds.</li>
+        <li>Cut into chunks and serve.</li>
     </ol>
 
 </body>
