Add lasagna ingredients and steps

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,17 +13,80 @@
         <img src="../images/lasagna.jpg" alt="an image of a garnished slice of lasagna 
         lifted from the main platter as cheese stretches in-between">
         <p><em>Lasagna</em></p>
+
     <h3>Ingredients</h3>
-    <ul>
-        <li></li>
-        <li></li>
-        <li></li>
-    </ul>
+        <h2>For the meat sauce:</h2>
+        <ul>
+            <li>2 teaspoons extra virgin olive oil</li>
+            <li>1 pound ground beef chuck</li>
+            <li>1/2 medium onion, diced (about 3/4 cup)</li>
+            <li>1/2 large bell pepper, diced (about 3/4 cup)</li>
+            <li>2 cloves garlic, minced</li>
+            <li>1 (28oz) can tomato sauce</li>
+            <li>3oz tomato paste</li>
+            <li>1 (14oz) can crushed tomatoes</li>
+            <li>2 tablespoons chopped fresh oregano, or 2 teaspoons 
+                dried oregano</li>
+            <li>1/4 cup chopped fresh parsey, packed</li>
+            <li>1 tablespoon italian seasoning</li>
+            <li>1 pinch garlic powder and/or garlic salt</li>
+            <li>1 tablespoons red or white wine vinegar</li>
+            <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
+            <li>Salt</li>
+        <h2>To assemble the lasagna:</h2>
+        <ul>
+            <li>1/2 pound dry lasagna noodles (required 9 lasagna 
+            noodles - unbroken)</li>
+            <li>15oz ricotta cheese</li>
+            <li>1 1/2 pounds (24oz) mozzarella cheese, grated or sliced</li>
+            <li>1/4 pound (4oz) freshly grated Parmesan cheese</li>
+        </ul>
     <h3>Steps</h3>
     <ol>
-        <li></li>
-        <li></li>
-        <li></li>
+        <li>Put a large pot of salted water (1 tbsp salt per 2 quarts of water) 
+            on the stovetop on high heat while the sauce is prepared.</li>
+        <li>In a large skillet heat 2 teaspoons of olive oil on medium-high 
+            heat. Add the ground beef and cook until it is lightly browned 
+            on all sides.</li>
+        <li>Add the diced bell pepper and onions to skillet and cook for 4-5 
+            minutes or until the onions are translucent and the peppers have 
+            softened.</li>
+        <li>Return the browned ground beed to the pan. Stire to combine, 
+            reduce the heat to low and cook for another 5 minutes.</li>
+        <li>Transfer the beef mixture to a medium sized (3-4 quart) pot. 
+            Add the crushed tomatoes, tomato sauce, and tomato paste to the pot</li>
+        <li>Add the parsley, oregano, and italian seasoning, adjusting the amounts 
+            to taste. Sprinkle with garlic powder and/or garlic salt, to taste.</li>
+        <li>Sprinkle with red or white wine vinegar. Stir in sugar, a tablespoon 
+            at a time to taste (amount of sugar needed may vary depending on how 
+            acidic the tomatoes are.)</li>
+        <li>Add salt to taste (note that parmesan will be added, which is salty)</li>
+        <li>Bring the sauce to a simmer and lower the heat to maintain a low 
+            simmmer. Cook for 15-45 miuntes, stirring often.</li>
+        <li>Scrape the bottom of the pot every so often so nothing sticks to 
+            the bottom and scorches.</li>
+        <li>Remove from heat.</li>
+        <li>Heat the oven to 375 degrees Fahrenheit.</li>
+        <li>In a 9x13in casserole or lasagna dish, ladle a cup of sauce and 
+            spread it over the bottom of the dish. Arrange one layer of lasagna 
+            noodles lengthwise (about 3 long noodles, edges may overlap depending 
+            on your pan) over the sauce. Ladle a third of the remaining sauce 
+            over the noodles.</li>
+        <li>Sprinkle a layer of a third of the grated mozzarella on top of the 
+            lasagna sauce. Add half of the ricotta cheese by placing cheese dollops 
+            every couple inches. Sprinkle half of the grated parmesan cheese 
+            evenly over the top of the ricotta cheese.</li>
+        <li>Apply second layer of noodles. Top it with half the remaining sauce. 
+            Add half of the remaining mozzarella, the ramining ricotta cheese, 
+            and the remaining parmesan.</li>
+        <li>Finish with another layer of noodles. Spread the remaining sauce over 
+            the top layer of noodles and sprinkle with the remaining mozzarella 
+            cheese.</li>
+        <li>Cover the lasagna pan with aluminum foil, tented slightly so it doesn't 
+            touch the noodles or sauce. Bake at 375 degrees Fahrenheit for 45 minutes. 
+            Uncover in the last 10 minutes if you'd like more of a crusty top or edges.</li>
+        <li>Allow lasagna to cool at least 15 minutes before serving. Leftovers will 
+            keep for about 5 days. May be reheated in conventional oven or microwave.</li>
     </ol>
 
 </body>
