Reformat recipe list

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 </head>
 
 <body>
-
-<p><a href="./recipes/lasagna.html">Lasagna</a></p>
-<p><a href="./recipes//salad.html">Salad</a></p>
-<p><a href="./recipes/garlic_bread.html">Garlic Bread</a></p>
+    <h1>Recipes</h1>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes//salad.html">Salad</a></li>
+        <li><a href="./recipes/garlic_bread.html">Garlic Bread</a></li>
+    </ul>
 
 </body>
 
