Adjust size for each image

--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=../css/style.css>
     <title>Lasagna</title>
 </head>
 
 <body>
 
     <h1>Lasagna</h1>
-        <img src="../images/lasagna.jpg" alt="an image of a garnished slice of lasagna 
-        lifted from the main platter as cheese stretches in-between">
+        <img src="../images/lasagna.jpg" alt="a slice of lasagna" 
+        class="image-lasagna">
         <p><em>Lasagna</em></p>
 
     <h3>Ingredients</h3>
