--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=../css/style.css>
     <title>Garlic Bread</title>
 </head>
 
 <body>
     
     <h1>Garlic Bread</h1>
-        <img src="../images/garlic_bread.jpg" alt="a top-down image of a toasted and 
-        sliced baguette as the slices of one are exposed to the camera">
+        <img src="../images/garlic_bread.jpg" alt="an image of garlic bread"
+        class="image-garlicbread">
         <p><em>Garlic Bread</em></p>
     <h3>Ingredients</h3>
     <ul>
