--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -4,13 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href=../css/style.css>
     <title>Salad</title>
 </head>
 
 <body>
     
     <h1>Salad</h1>
-        <img src="../images/salad.jpg" alt="salad image">
+        <img src="../images/salad.jpg" alt="a bowl of salad" 
+        class="image-salad">
         <p><em>Salad</em></p>
     
     <h3>Ingredients</h3>
