Fix anchor element for salad recipe

--- a/index.html
+++ b/index.html
@@ -9,15 +9,12 @@
 </head>
 
 <body>
-    <h1>Recipes</h1>
-    <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes//salad.html">Salad</a></li>
-        <li><a href="./recipes/garlic_bread.html">Garlic Bread</a></li>
+    <h1 class="page-title">Recipes</h1>
+        <ul>
+            <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+            <li><a href="./recipes/salad.html">Salad</a></li>
+            <li><a href="./recipes/garlic_bread.html">Garlic Bread</a></li>
     </ul>
-
 </body>
-
-
 
 </html>
