Change all fonts to sans-serif, center webpage headers, reword subtitle

--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -10,31 +10,32 @@
 
 <body>
     
-    <h1>Garlic Bread</h1>
+    <h1 class="page-title">Garlic Bread</h1>
         <img src="../images/garlic_bread.jpg" alt="an image of garlic bread"
         class="image-garlicbread">
-        <p><em>Garlic Bread</em></p>
-    <h3>Ingredients</h3>
-    <ul>
-        <li>4 cloves garlic, crushed</li>
-        <li>2 tablespoons butter</li>
-        <li>2 tablespoons extra-virgin olive oil</li>
-        <li>1 load crusty bread, split</li>
-        <li>3 tablespoons grated cheese, Parmigiano or Romano, optional</li>
-        <li>Chopped fresh parsley</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Combine garlic, butter, and oil in a microwave safe dish or in 
+        <p class="subtitle">a perfect side-kick for your main dish</p>
+
+    <h3 class="ingredients">Ingredients</h3>
+        <ul class="ingredients">
+            <li>4 cloves garlic, crushed</li>
+            <li>2 tablespoons butter</li>
+            <li>2 tablespoons extra-virgin olive oil</li>
+            <li>1 load crusty bread, split</li>
+            <li>3 tablespoons grated cheese, Parmigiano or Romano, optional</li>
+            <li>Chopped fresh parsley</li>
+        </ul>
+    <h3 class="steps">Steps</h3>
+        <ol class="steps">
+            <li>Combine garlic, butter, and oil in a microwave safe dish or in 
             a small sauce pan.</li>
-        <li>Heat garlic and butter and oil in microwave for 1 minute or in 
+            <li>Heat garlic and butter and oil in microwave for 1 minute or in 
             a small pot over moderate-low heat for 3 minutes.</li>
-        <li>Toast split bread under broiler. Remove bread when it is toasted 
+            <li>Toast split bread under broiler. Remove bread when it is toasted 
             golden brown in color.</li>
-        <li>Bursh bread liberally with garlic oil. Sprinkle with cheese, if 
+            <li>Bursh bread liberally with garlic oil. Sprinkle with cheese, if 
             using, and parsley</li>
-        <li>If you added cheese, return to broiler and brown 30 seconds.</li>
-        <li>Cut into chunks and serve.</li>
+            <li>If you added cheese, return to broiler and brown 30 seconds.</li>
+            <li>Cut into chunks and serve.</li>
     </ol>
 
 </body>
