--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -4,41 +4,40 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href=../css/style.css>
+    <link rel="stylesheet" href="../css/style.css" >
     <title>Salad</title>
 </head>
 
 <body>
     
-    <h1>Salad</h1>
-        <img src="../images/salad.jpg" alt="a bowl of salad" 
-        class="image-salad">
-        <p><em>Salad</em></p>
+    <h1 class="page-title">Salad</h1>
+        <img src="../images/salad.jpg" alt="a bowl of salad" class="image-salad">
+        <p class="subtitle">an elegant mix of greens to compliment a hearty dish</p>
     
-    <h3>Ingredients</h3>
-        <h4>Base Salad</h4>
-        <ul>
-            <li>5 cups loosely packed mixed greens</li>
-            <li>2 tablespoons shelled sunflower seeds</li>
-            <li>1/4 cup crumbled bacon</li>
-            <li>1/4 red onion, thinly sliced</li>
-            <li>1 cucumber, peeled and thinly sliced</li>
-        </ul>
-        <h4>Dressing</h4>
-        <ul>
-            <li>1/4 cup dijon mustard</li>
-            <li>1/4 cup honey</li>
-            <li>1/4 cup apple cider vinegar</li>
-            <li>1/4 teaspoon black pepper</li>
-            <li>1/4 cup extra virgin olive oil</li>
-        </ul>
-    <h3>Steps</h3>
-    <ol>
-        <li>Combine all dressing ingredients in a jar, cover, and 
+    <h3 class="ingredients">Ingredients</h3>
+        <h4 class="ingredients">Base Salad</h4>
+            <ul class="ingredients">
+                <li>5 cups loosely packed mixed greens</li>
+                <li>2 tablespoons shelled sunflower seeds</li>
+                <li>1/4 cup crumbled bacon</li>
+                <li>1/4 red onion, thinly sliced</li>
+                <li>1 cucumber, peeled and thinly sliced</li>
+            </ul>
+        <h4 class="ingredients">Dressing</h4>
+            <ul class="ingredients">
+                <li>1/4 cup dijon mustard</li>
+                <li>1/4 cup honey</li>
+                <li>1/4 cup apple cider vinegar</li>
+                <li>1/4 teaspoon black pepper</li>
+                <li>1/4 cup extra virgin olive oil</li>
+            </ul>
+    <h3 class="steps">Steps</h3>
+        <ol class="steps">
+            <li>Combine all dressing ingredients in a jar, cover, and 
             shake vigorously to combine.</li>
-        <li>In a large bowl combine mixed green, sunflower seeds, 
+            <li>In a large bowl combine mixed green, sunflower seeds, 
             bacon, red onions, and cucumber.</li>
-        <li>Just before serving, add dressing to tast and toss to 
+            <li>Just before serving, add dressing to tast and toss to 
             combine. Serve immediately.</li>
     </ol>
 
