Consolidate style.css code, remove class tags

--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -10,13 +10,12 @@
 
 <body>
     
-    <h1 class="page-title">Garlic Bread</h1>
-        <img src="../images/garlic_bread.jpg" alt="an image of garlic bread"
-        class="image-garlicbread">
-        <p class="subtitle">a perfect side-kick for your main dish</p>
+    <h1>Garlic Bread</h1>
+        <img src="../images/garlic_bread.jpg" alt="an image of garlic bread" class="image-garlicbread">
+        <p>a perfect side-kick for your main dish</p>
 
-    <h3 class="ingredients">Ingredients</h3>
-        <ul class="ingredients">
+    <h3>Ingredients</h3>
+        <ul>
             <li>4 cloves garlic, crushed</li>
             <li>2 tablespoons butter</li>
             <li>2 tablespoons extra-virgin olive oil</li>
@@ -24,8 +23,8 @@
             <li>3 tablespoons grated cheese, Parmigiano or Romano, optional</li>
             <li>Chopped fresh parsley</li>
         </ul>
-    <h3 class="steps">Steps</h3>
-        <ol class="steps">
+    <h3>Steps</h3>
+        <ol>
             <li>Combine garlic, butter, and oil in a microwave safe dish or in 
             a small sauce pan.</li>
             <li>Heat garlic and butter and oil in microwave for 1 minute or in 
