--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,14 +10,14 @@
 
 <body>
 
-    <h1 class="page-title">Lasagna</h1>
+    <h1>Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="a slice of lasagna" 
         class="image-lasagna">
-        <p class="subtitle">a dish that the whole family will love!</p>
+        <p>a dish that the whole family will love!</p>
 
-    <h3 class="ingredients">Ingredients</h3>
-        <h4 class="ingredients">For the meat sauce:</h4>
-            <ul class="ingredients">
+    <h3>Ingredients</h3>
+        <h4>For the meat sauce:</h4>
+            <ul>
                 <li>2 teaspoons extra virgin olive oil</li>
                 <li>1 pound ground beef chuck</li>
                 <li>1/2 medium onion, diced (about 3/4 cup)</li>
@@ -35,16 +35,16 @@
                 <li>1 tablespoon to 1/4 cup sugar (to taste, optional)</li>
                 <li>Salt</li>
             </ul>
-        <h4 class="ingredients">To assemble the lasagna:</h4>
-            <ul class="ingredients">
+        <h4>To assemble the lasagna:</h4>
+            <ul>
                 <li>1/2 pound dry lasagna noodles (required 9 lasagna 
                 noodles - unbroken)</li>
                 <li>15oz ricotta cheese</li>
                 <li>1 1/2 pounds (24oz) mozzarella cheese, grated or sliced</li>
                 <li>1/4 pound (4oz) freshly grated Parmesan cheese</li>
             </ul>
-    <h3 class="steps">Steps</h3>
-        <ol class="steps">
+    <h3>Steps</h3>
+        <ol>
             <li>Put a large pot of salted water (1 tbsp salt per 2 quarts of water) 
             on the stovetop on high heat while the sauce is prepared.</li>
             <li>In a large skillet heat 2 teaspoons of olive oil on medium-high 
