--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -10,29 +10,29 @@
 
 <body>
     
-    <h1 class="page-title">Salad</h1>
+    <h1>Salad</h1>
         <img src="../images/salad.jpg" alt="a bowl of salad" class="image-salad">
-        <p class="subtitle">an elegant mix of greens to compliment a hearty dish</p>
+        <p>an elegant mix of greens to compliment a hearty dish</p>
     
-    <h3 class="ingredients">Ingredients</h3>
-        <h4 class="ingredients">Base Salad</h4>
-            <ul class="ingredients">
+    <h3>Ingredients</h3>
+        <h4>Base Salad</h4>
+            <ul>
                 <li>5 cups loosely packed mixed greens</li>
                 <li>2 tablespoons shelled sunflower seeds</li>
                 <li>1/4 cup crumbled bacon</li>
                 <li>1/4 red onion, thinly sliced</li>
                 <li>1 cucumber, peeled and thinly sliced</li>
             </ul>
-        <h4 class="ingredients">Dressing</h4>
-            <ul class="ingredients">
+        <h4>Dressing</h4>
+            <ul>
                 <li>1/4 cup dijon mustard</li>
                 <li>1/4 cup honey</li>
                 <li>1/4 cup apple cider vinegar</li>
                 <li>1/4 teaspoon black pepper</li>
                 <li>1/4 cup extra virgin olive oil</li>
             </ul>
-    <h3 class="steps">Steps</h3>
-        <ol class="steps">
+    <h3>Steps</h3>
+        <ol>
             <li>Combine all dressing ingredients in a jar, cover, and 
             shake vigorously to combine.</li>
             <li>In a large bowl combine mixed green, sunflower seeds, 
