Add background color to page title, reformat image caption

--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -12,7 +12,7 @@
     
     <h1>Garlic Bread</h1>
         <img src="../images/garlic_bread.jpg" alt="an image of garlic bread" class="image-garlicbread">
-        <p>a perfect side-kick for your main dish</p>
+        <p class="image-caption">a perfect side-kick for your main dish</p>
 
     <h3>Ingredients</h3>
         <ul>
