--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -13,7 +13,7 @@
     <h1>Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="a slice of lasagna" 
         class="image-lasagna">
-        <p>a dish that the whole family will love!</p>
+        <p class="image-caption">a dish that the whole family will love!</p>
 
     <h3>Ingredients</h3>
         <h4>For the meat sauce:</h4>
