--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -12,7 +12,7 @@
     
     <h1>Salad</h1>
         <img src="../images/salad.jpg" alt="a bowl of salad" class="image-salad">
-        <p>an elegant mix of greens to compliment a hearty dish</p>
+        <p class="image-caption">an elegant mix of greens to compliment a hearty dish</p>
     
     <h3>Ingredients</h3>
         <h4>Base Salad</h4>
