Add home button to return to main webpage

--- a/recipes/garlic_bread.html
+++ b/recipes/garlic_bread.html
@@ -10,6 +10,7 @@
 
 <body>
     
+    <a href="../index.html" id="home-button">Home</a>
     <h1>Garlic Bread</h1>
         <img src="../images/garlic_bread.jpg" alt="an image of garlic bread" class="image-garlicbread">
         <p class="image-caption">a perfect side-kick for your main dish</p>
