--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -10,6 +10,7 @@
 
 <body>
 
+    <a href="../index.html" id="home-button">Home</a>
     <h1>Lasagna</h1>
         <img src="../images/lasagna.jpg" alt="a slice of lasagna" 
         class="image-lasagna">
