--- a/recipes/salad.html
+++ b/recipes/salad.html
@@ -10,6 +10,7 @@
 
 <body>
     
+    <a href="../index.html" id="home-button">Home</a>
     <h1>Salad</h1>
         <img src="../images/salad.jpg" alt="a bowl of salad" class="image-salad">
         <p class="image-caption">an elegant mix of greens to compliment a hearty dish</p>
