--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
 <body>
     <h1 class="page-title">Recipes</h1>
+    <p>a comprehensive list of recipes to my favorite foods!</p>
         <ul>
             <li><a href="./recipes/lasagna.html">Lasagna</a></li>
             <li><a href="./recipes/salad.html">Salad</a></li>
